dealer/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealer-api
  annotations:
    fluxcd.io/automated: "true"  
spec:
  replicas: 4
  selector:
    matchLabels:
      app: dealer-api
  template:
    metadata:
      labels:
        app: dealer-api
    spec:
      containers:
      - name: dealer-api
        image: 289952279049.dkr.ecr.ap-northeast-1.amazonaws.com/ds-test
        imagePullPolicy: Always
      nodeSelector:
        eks.amazonaws.com/nodegroup: api-ng
