dealer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dealer-api
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  selector:
    app: dealer-api
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
